Archive2/58/3cf2c333edcb83/output
+ g++-5.1 -std=c++14 -O0 -Wall -pedantic -Wextra -pthread main.cpp
+ ./a.out
+ clang++ -std=c++14 -O0 -Wall -pedantic -Wextra -pthread main.cpp -stdlib=libc++ -lsupc++
main.cpp:15:21: error: constexpr variable 'i' must be initialized by a constant expression
  constexpr int i = f.Bar();
                    ^~~~~~~
main.cpp:22:21: note: in instantiation of function template specialization 'ByReference<1>' requested here
  constexpr int b = ByReference(Foo<1>{});
                    ^
1 error generated.
